--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,12 +10,14 @@
         <p>Aqui puedes llevar un registro de todas tus tareas y 
             tener una vista general de todas tus responsabilidades</p>
 
+        <img class="img" src="{{ url_for('static', filename = 'media/Sin título.png') }}" alt="">
+
         <hr class="my-4">
 
         <p>¿Tienes una cuenta?</p>
 
         <div class="d-flex justify-content-end">
-            <a href="{{url_for('auth.register')}}" class="btn btn-primary mx-2">Registrar</a>
+            <a href="{{url_for('auth.register')}}" class="btn btn-light" style="background-color: #2F4F4F; color:white">Registrar</a>
             <a href="{{url_for('auth.login')}}" class="btn btn-secundary mx-2">Iniciar sesión</a>
         </div>
 
