--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,7 +17,7 @@
 
     <!-- menu de navegacion -->
 
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark"  data-bs-theme="dark">
+    <nav class="navbar navbar-expand-sm navbar-dark"  style="background-color: #2F4F4F;">
         <div class="container-fluid">
           {% if g.user %}
           <a class="navbar-brand" href="{{url_for('book.index')}}">Lista de Libros</a>
