--- a/app/templates/book/create.html
+++ b/app/templates/book/create.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <section class="container-sm">
-    <h3 class="text-center mt-3 mb-3">{% block title %}Ingresar Tarea{% endblock %}</h3>
+    <h3 class="text-center mt-3 mb-3">{% block title %}Ingresar Libro{% endblock %}</h3>
     <form action="" method="post" enctype="multipart/form-data">
         {{csrf_token}}
         <div class="form-group">
@@ -28,22 +28,20 @@
         <div class="form-group">
             <label for="desc">Puntuación</label>
             <div class="rating">
-                <input type="radio" name="rating" value="5">5⭐
+                <input type="radio" name="rating" value="5"> 5 ⭐
                 <br>
-                <input type="radio" name="rating" value="4">4⭐
+                <input type="radio" name="rating" value="4"> 4 ⭐
                 <br>
-                <input type="radio" name="rating" value="3">3⭐
+                <input type="radio" name="rating" value="3"> 3 ⭐
                 <br>
-                <input type="radio" name="rating" value="2">2⭐
+                <input type="radio" name="rating" value="2"> 2 ⭐
                 <br>
-                <input type="radio" name="rating" value="1">1⭐
+                <input type="radio" name="rating" value="1"> 1 ⭐
             </div>
         </div>
-        <br>
         <div class="form-group">
             <input type="file" id="image" name="image" class="form-control">
         </div>
-        <br>
         <div class="text-center">
             <input type="submit" class="btn btn-primary" value="Guardar">
             <a href="{{ url_for('book.index') }}" class="btn btn-secondary">Cancelar</a>
